protocols/tests/adders/adder_d0/illegal_assignment.out
error: Output 'DUT.s' depends on input(s) 'DUT.b', 'DUT.a' which do not have assigned values ('DUT.b', 'DUT.a' initialized to DontCare and were never assigned a concrete value)
   ┌─ adders/adder_d0/add_d0.prot:30:7
   │
30 │   if (DUT.s == 32'b0) {
   │       ^^^^^ Output 'DUT.s' depends on input(s) 'DUT.b', 'DUT.a' which do not have assigned values ('DUT.b', 'DUT.a' initialized to DontCare and were never assigned a concrete value)

